[package]
name = "pokem"
version = "1.1.0"
edition = "2021"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
readme = "README.md"
license = "MIT"
description = "Pok'em, a notification helper bot for Matrix."
repository = "https://github.com/arcuru/pokem"
homepage = "https://github.com/arcuru/pokem"
categories =["command-line-utilities"]

[[bin]]
name = "pokem"
test = false

[dependencies]
headjack = "0.4"
anyhow = "1"
is-terminal = "0.4"
urlencoding = "2"
tracing-subscriber = "0.3"
tracing = "0.1"
matrix-sdk = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
regex = "1"
dirs = "5"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12"
url = "2.5.2"
